# oneclick-studio

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
scripts/: test-prompts.mts  test-roundtrip.mjs  test-safeguards.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_settings_model.sql  003_imgbb_key.sql  004_higgsfield.sql  005_character_generation_id.sql  006_landing_pages.sql  007_landings_unscoped.sql  008_landings_starred.sql  009_landing_presets.sql  010_anthropic_key.sql  011_character_aspect_ratio.sql  012_character_count.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: character.rs  elements.rs  files.rs  generations.rs  mod.rs  system.rs
src/components/character/: CharacterImageModal.tsx  OptionChips.tsx
src/components/elements/: ElementCard.tsx  ElementDetailModal.tsx  ElementTypeChip.tsx  ElementUploader.tsx  ElementWarningBanner.tsx
src/components/generations/: GenerationCard.tsx  GenerationDetailModal.tsx
src/components/hud/: Button.tsx  ColorPicker.tsx  CornerBrackets.tsx  HudInput.tsx  HudReticle.tsx  HudTextarea.tsx  IconButton.tsx  Modal.tsx  Panel.tsx  ScanlineOverlay.tsx  Select.tsx  Slider.tsx  StatusBadge.tsx  Toast.tsx  Toggle.tsx  index.ts
src/components/landing/: ExportMenu.tsx  FormattingToolbar.tsx  GenerateWithAIModal.tsx  PresetPicker.tsx  (+6 more)
src/lib/: anthropicClient.ts  assetUrl.ts  characterPrompt.ts  config.ts  db.ts  elementTypes.ts  landingExport.ts  landingExtract.ts  landingTypes.ts  projectColors.ts  relativeTime.ts  tagResolver.ts  tauri.ts  validators.ts  version.ts
src/routes/: CharacterCreator.tsx  Elements.tsx  GenerationsFeed.tsx  Generator.tsx  HudDemo.tsx  LandingPageEditor.tsx  Landings.tsx  Layout.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx
src/stores/: charactersStore.ts  elementsStore.ts  generationsStore.ts  landingsStore.ts  projectsStore.ts  settingsStore.ts  toastStore.ts  userPresetsStore.ts
src/styles/: globals.css
(+13 files in other folders)
